# rs-bann

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
py-prep/: mappings.py
py-vis/: sim.py  vis.py
resources/test/: README.md  random.bed  random.dims  small.bed  small.bim  small.fam  small.gene_grouping  small.gene_grouping_meta  small.gff3  small.ld
scripts/: fill_missing_a2.sh  sim_random_phen.r  sim_train_pred.sh  split_train_test.sh
src/: af_helpers.rs  afnet.rs  arr_helpers.rs  data.rs  error.rs  lib.rs  linear_model.rs  main.rs  network.rs
src/branch/: branch_builder.rs  params.rs
src/data/: data.rs  genotypes.rs  mod.rs  phen_stats.rs  phenotypes.rs
src/group/: centered.rs  external.rs  gene.rs  grouping.rs  io.rs  mod.rs  uniform.rs
src/io/: bed.rs  bed_lookup_tables.rs  bim.rs  chromosome.rs  dims.rs  fam.rs  gff.rs  indexed_read.rs  mod.rs
src/net/: activation_functions.rs  af_helpers.rs  architectures.rs  data.rs  gibbs_steps.rs  log_posterior_density.rs  mcmc_cfg.rs  mod.rs  model_type.rs  net.rs  params.rs  train_stats.rs
src/net/branch/: ard_branch.rs  base_branch.rs  branch.rs  branch_builder.rs  branch_cfg.rs  branch_cfg_builder.rs  branch_sampler.rs  branch_struct.rs  gradient.rs  lasso_ard.rs  lasso_base.rs  micro_trace.rs  mod.rs  momenta.rs  momentum.rs  params.rs  ridge_ard.rs  ridge_base.rs  std_normal_branch.rs  step_sizes.rs  training_state.rs  trajectory.rs
