[package]
name = "rs-bann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8"
rs-bedvec = { git = "https://github.com/nickmachnik/bedvec.git" }
rs-hmc = { git = "https://github.com/nickmachnik/rs-hmc.git" }
rayon = "1.5"
statrs = "0.15"
rand = "0.8.4"
rand_distr = "*"
ndarray = { version = "0.15", features = ["blas", "approx"] }
blas-src = { version = "*",  default-features=false, features=["netlib"] }
openblas-src = { version = "*", default-features = false, features = ["cblas", "static"] }
log = "0.4"
simple_logger = "2.2"
