[package]
name = "rs-bann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3.1"
assert_approx_eq = "1.1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
csv = "1.1.6"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
bed-reader = "0.2.28"
arrayfire = { version = "*", features = ["afserde"] }
rayon = "1.5"
statrs = "0.15"
rand = "0.8.4"
rand_distr = "*"
ndarray = { version = "0.15", features = ["blas", "approx"] }
blas-src = { version = "*",  default-features=false, features=["netlib"] }
openblas-src = { version = "*", default-features = false, features = ["cblas", "static"] }
log = "0.4"
simple_logger = "2.2"
clap = { version = "3.2.10", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"